--- a/configure.in
+++ b/configure.in
@@ -5,8 +5,8 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 
-AC_CANONICAL_SYSTEM
-case $target_os in
+AC_CANONICAL_HOST
+case $host_os in
 solaris*)
 	AC_DEFINE(ETC_INET)
 	;;
