--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.3 2004/02/03 13:58:08 bagder Exp $
+# $Id: Makefile.in,v 1.9 2004/02/29 18:39:31 bagder Exp $
 
 SHELL=/bin/sh
 INSTALL=@INSTALL@
@@ -21,17 +21,22 @@ LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@
 ALL_CFLAGS=${CPPFLAGS} ${CFLAGS} ${DEFS}
 OBJS=	ares__close_sockets.o ares__get_hostent.o ares__read_line.o \
-	ares_destroy.o ares_expand_name.o ares_fds.o ares_free_errmem.o \
+	ares_destroy.o ares_expand_name.o ares_fds.o \
 	ares_free_hostent.o ares_free_string.o ares_gethostbyaddr.o \
 	ares_gethostbyname.o ares_init.o ares_mkquery.o ares_parse_a_reply.o \
 	ares_parse_ptr_reply.o ares_process.o ares_query.o ares_search.o \
 	ares_send.o ares_strerror.o ares_timeout.o ares_version.o
 
-all: $(LIB) adig ahost
-
 $(LIB): ${OBJS}
 	ar cru $@ ${OBJS}
 	${RANLIB} $@
+
+all: $(LIB) demos
+
+demos: adig ahost
+
+tags:
+	etags *.[ch]
 
 adig: adig.o $(LIB)
 	${CC} ${LDFLAGS} -o $@ adig.o $(LIB) ${LIBS}
@@ -54,10 +59,10 @@ install:
 	${RANLIB} ${DESTDIR}${libdir}/$(LIB)
 	chmod u-w ${DESTDIR}${libdir}/$(LIB)
 	${INSTALL} -m 444 ${srcdir}/ares.h ${DESTDIR}${includedir}
+	${INSTALL} -m 444 ${srcdir}/ares_version.h ${DESTDIR}${includedir}
 	${INSTALL} -m 444 ${srcdir}/ares_destroy.3 ${DESTDIR}${mandir}/man3
 	${INSTALL} -m 444 ${srcdir}/ares_expand_name.3 ${DESTDIR}${mandir}/man3
 	${INSTALL} -m 444 ${srcdir}/ares_fds.3 ${DESTDIR}${mandir}/man3
-	${INSTALL} -m 444 ${srcdir}/ares_free_errmem.3 ${DESTDIR}${mandir}/man3
 	${INSTALL} -m 444 ${srcdir}/ares_free_hostent.3 \
 		${DESTDIR}${mandir}/man3
 	${INSTALL} -m 444 ${srcdir}/ares_free_string.3 \
