--- a/configure.ac
+++ b/configure.ac
@@ -1,16 +1,21 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(ares_init.c)
+AM_CONFIG_HEADER(config.h)
+AM_MAINTAINER_MODE
+AM_INIT_AUTOMAKE(c-ares, CVS)
 
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_PROG_RANLIB
 
-AC_CANONICAL_HOST
 case $host_os in
 solaris*)
-	AC_DEFINE(ETC_INET)
+	AC_DEFINE(ETC_INET, 1, [if a /etc/inet dir is being used])
 	;;
 esac
+
+# check for ssize_t
+AC_CHECK_TYPE(ssize_t, ,
+   AC_DEFINE(ssize_t, int, [the signed version of size_t]))
 
 AC_SEARCH_LIBS(gethostbyname, nsl)
 AC_SEARCH_LIBS(socket, socket)
@@ -30,6 +35,9 @@ AC_HELP_STRING([--disable-debug],[Disable debug options]),
        ;;
   *)   AC_MSG_RESULT(yes)
 
+    dnl when doing the debug stuff, use static library only
+    AC_DISABLE_SHARED
+
     dnl Checks for standard header files, to make memdebug.h inclusions bettter
     AC_HEADER_STDC
 
@@ -45,12 +53,14 @@ AC_HELP_STRING([--disable-debug],[Disable debug options]),
        AC_MSG_RESULT(no)
 )
 
+AC_PROG_LIBTOOL
+
 dnl check for a few basic system headers we need
-dnl AC_CHECK_HEADERS(
-dnl        sys/types.h \
-dnl        sys/time.h \
-dnl        sys/select.h \
-dnl        sys/socket.h \
-dnl        )
+AC_CHECK_HEADERS(
+       sys/types.h \
+       sys/time.h \
+       sys/select.h \
+       sys/socket.h \
+       )
 
 AC_OUTPUT(Makefile)
