--- a/config.h.in
+++ b/config.h.in
@@ -1,10 +1,31 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* define this if ares is built for a big endian system */
+#undef ARES_BIG_ENDIAN
+
 /* when building as static part of libcurl */
 #undef BUILDING_LIBCURL
 
 /* if a /etc/inet dir is being used */
 #undef ETC_INET
+
+/* Define to the type of arg 1 for getnameinfo. */
+#undef GETNAMEINFO_TYPE_ARG1
+
+/* Define to the type of arg 2 for getnameinfo. */
+#undef GETNAMEINFO_TYPE_ARG2
+
+/* Define to the type of args 4 and 6 for getnameinfo. */
+#undef GETNAMEINFO_TYPE_ARG46
+
+/* Define to the type of arg 7 for getnameinfo. */
+#undef GETNAMEINFO_TYPE_ARG7
+
+/* Specifies the number of arguments to getservbyport_r */
+#undef GETSERVBYPORT_R_ARGS
+
+/* Specifies the size of the buffer to pass to getservbyport_r */
+#undef GETSERVBYPORT_R_BUFSIZE
 
 /* Define to 1 if you have AF_INET6. */
 #undef HAVE_AF_INET6
@@ -29,6 +50,12 @@
 
 /* use FIONBIO for non-blocking sockets */
 #undef HAVE_FIONBIO
+
+/* Define to 1 if you have the getnameinfo function. */
+#undef HAVE_GETNAMEINFO
+
+/* Specifies whether getservbyport_r is present */
+#undef HAVE_GETSERVBYPORT_R
 
 /* Define to 1 if you have the `if_indextoname' function. */
 #undef HAVE_IF_INDEXTONAME
@@ -60,8 +87,17 @@
 /* use Ioctlsocket() for non-blocking sockets */
 #undef HAVE_IOCTLSOCKET_CASE
 
+/* if your compiler supports LL */
+#undef HAVE_LL
+
+/* if your compiler supports long long */
+#undef HAVE_LONGLONG
+
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
+
+/* Define to 1 if you have the <netdb.h> header file. */
+#undef HAVE_NETDB_H
 
 /* Define to 1 if you have the <netinet/in.h> header file. */
 #undef HAVE_NETINET_IN_H
@@ -102,6 +138,9 @@
 /* Define to 1 if you have struct sockaddr_in6. */
 #undef HAVE_STRUCT_SOCKADDR_IN6
 
+/* if struct sockaddr_storage is defined */
+#undef HAVE_STRUCT_SOCKADDR_STORAGE
+
 /* Define to 1 if you have the <sys/ioctl.h> header file. */
 #undef HAVE_SYS_IOCTL_H
 
@@ -123,11 +162,17 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
-/* Define to 1 if you have the <winsock.h> header file. */
+/* Define to 1 if you have the windows.h header file. */
+#undef HAVE_WINDOWS_H
+
+/* Define to 1 if you have the winsock2.h header file. */
+#undef HAVE_WINSOCK2_H
+
+/* Define to 1 if you have the winsock.h header file. */
 #undef HAVE_WINSOCK_H
 
-/* Define to 1 if you have the <\> header file. */
-#undef HAVE___
+/* Define to 1 if you have the ws2tcpip.h header file. */
+#undef HAVE_WS2TCPIP_H
 
 /* Name of package */
 #undef PACKAGE
@@ -147,19 +192,52 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* The size of a `struct in6_addr', as computed by sizeof. */
+/* The size of `curl_off_t', as computed by sizeof. */
+#undef SIZEOF_CURL_OFF_T
+
+/* The size of `long', as computed by sizeof. */
+#undef SIZEOF_LONG
+
+/* The size of `size_t', as computed by sizeof. */
+#undef SIZEOF_SIZE_T
+
+/* The size of `struct in6_addr', as computed by sizeof. */
 #undef SIZEOF_STRUCT_IN6_ADDR
 
-/* The size of a `struct in_addr', as computed by sizeof. */
+/* The size of `struct in_addr', as computed by sizeof. */
 #undef SIZEOF_STRUCT_IN_ADDR
+
+/* The size of `time_t', as computed by sizeof. */
+#undef SIZEOF_TIME_T
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
+#undef TIME_WITH_SYS_TIME
+
 /* Version number of package */
 #undef VERSION
 
-/* the length of a socket address */
+/* Define to avoid automatic inclusion of winsock.h */
+#undef WIN32_LEAN_AND_MEAN
+
+/* Number of bits in a file offset, on hosts where this is settable. */
+#undef _FILE_OFFSET_BITS
+
+/* Define for large files, on AIX-style hosts. */
+#undef _LARGE_FILES
+
+/* Define to empty if `const' does not conform to ANSI C. */
+#undef const
+
+/* type to use in place of in_addr_t if not defined */
+#undef in_addr_t
+
+/* Define to `unsigned int' if <sys/types.h> does not define. */
+#undef size_t
+
+/* type to use in place of socklen_t if not defined */
 #undef socklen_t
 
 /* the signed version of size_t */
