--- a/Makefile.in
+++ b/Makefile.in
@@ -148,6 +148,8 @@ MAINT = @MAINT@
 MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
 MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
+NO_UNDEFINED_FALSE = @NO_UNDEFINED_FALSE@
+NO_UNDEFINED_TRUE = @NO_UNDEFINED_TRUE@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
@@ -216,7 +218,7 @@ MSVCFILES = vc/adig/adig.dep vc/adig/adig.dsp vc/vc.dsw vc/ahost/ahost.dep \
 # adig and ahost are just sample programs and thus not mentioned with the
 # regular sources and headers
 EXTRA_DIST = CHANGES README.cares Makefile.inc adig.c ahost.c $(man_MANS) \
- $(MSVCFILES) AUTHORS
+ $(MSVCFILES) AUTHORS config-win32.h
 
 VER = -version-info 1:0:0
 # This flag accepts an argument of the form current[:revision[:age]]. So,
@@ -246,7 +248,10 @@ VER = -version-info 1:0:0
 # 6.If any interfaces have been removed since the last public release, then
 # set age to 0. (c:r:a=0)
 #
-libcares_la_LDFLAGS = $(VER)
+
+# The -no-undefined flag is crucial for this to build fine on some platforms
+@NO_UNDEFINED_TRUE@UNDEF = -no-undefined
+libcares_la_LDFLAGS = $(UNDEF) $(VER)
 CSOURCES = ares_fds.c ares_getsock.c ares_process.c ares_free_hostent.c	\
 ares_query.c ares__close_sockets.c ares_free_string.c ares_search.c	\
 ares__get_hostent.c ares_gethostbyaddr.c ares_send.c ares__read_line.c	\
@@ -257,14 +262,16 @@ ares_expand_string.c ares_parse_ptr_reply.c ares_parse_aaaa_reply.c	\
 ares_getnameinfo.c inet_net_pton.c bitncmp.c inet_ntop.c
 
 HHEADERS = ares.h ares_private.h setup.h ares_dns.h ares_version.h          \
-           nameser.h inet_net_pton.h inet_ntop.h ares_ipv6.h bitncmp.h
+           nameser.h inet_net_pton.h inet_ntop.h ares_ipv6.h bitncmp.h      \
+           setup_once.h 
 
 MANPAGES = ares_destroy.3 ares_expand_name.3 ares_expand_string.3 ares_fds.3 \
  ares_free_hostent.3 ares_free_string.3 ares_gethostbyaddr.3                \
  ares_gethostbyname.3 ares_init.3 ares_init_options.3 ares_mkquery.3        \
  ares_parse_a_reply.3 ares_parse_ptr_reply.3 ares_process.3                 \
  ares_query.3 ares_search.3 ares_send.3 ares_strerror.3 ares_timeout.3      \
- ares_version.3 ares_cancel.3 ares_parse_aaaa_reply.3 ares_getnameinfo.3
+ ares_version.3 ares_cancel.3 ares_parse_aaaa_reply.3 ares_getnameinfo.3    \
+ ares_getsock.3
 
 
 # Makefile.inc provides the CSOURCES and HHEADERS defines
