--- a/Makefile.in
+++ b/Makefile.in
@@ -73,7 +73,7 @@ am__objects_1 = ares_fds.lo ares_getsock.lo ares_process.lo \
 	ares_version.lo ares_expand_name.lo ares_parse_a_reply.lo \
 	windows_port.lo ares_expand_string.lo ares_parse_ptr_reply.lo \
 	ares_parse_aaaa_reply.lo ares_getnameinfo.lo inet_net_pton.lo \
-	bitncmp.lo inet_ntop.lo
+	bitncmp.lo inet_ntop.lo ares_parse_ns_reply.lo
 am__objects_2 =
 am_libcares_la_OBJECTS = $(am__objects_1) $(am__objects_2)
 libcares_la_OBJECTS = $(am_libcares_la_OBJECTS)
@@ -123,6 +123,7 @@ CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
+CXXCPP = @CXXCPP@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
@@ -159,6 +160,7 @@ PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+RANDOM_FILE = @RANDOM_FILE@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -218,7 +220,7 @@ MSVCFILES = vc/adig/adig.dep vc/adig/adig.dsp vc/vc.dsw vc/ahost/ahost.dep \
 # adig and ahost are just sample programs and thus not mentioned with the
 # regular sources and headers
 EXTRA_DIST = CHANGES README.cares Makefile.inc adig.c ahost.c $(man_MANS) \
- $(MSVCFILES) AUTHORS config-win32.h
+ $(MSVCFILES) AUTHORS config-win32.h RELEASE-NOTES
 
 VER = -version-info 1:0:0
 # This flag accepts an argument of the form current[:revision[:age]]. So,
@@ -259,19 +261,21 @@ ares_gethostbyname.c ares_strerror.c ares_cancel.c ares_init.c		\
 ares_timeout.c ares_destroy.c ares_mkquery.c ares_version.c		\
 ares_expand_name.c ares_parse_a_reply.c windows_port.c			\
 ares_expand_string.c ares_parse_ptr_reply.c ares_parse_aaaa_reply.c	\
-ares_getnameinfo.c inet_net_pton.c bitncmp.c inet_ntop.c
+ares_getnameinfo.c inet_net_pton.c bitncmp.c inet_ntop.c		\
+ares_parse_ns_reply.c
 
 HHEADERS = ares.h ares_private.h setup.h ares_dns.h ares_version.h          \
            nameser.h inet_net_pton.h inet_ntop.h ares_ipv6.h bitncmp.h      \
            setup_once.h 
 
 MANPAGES = ares_destroy.3 ares_expand_name.3 ares_expand_string.3 ares_fds.3 \
- ares_free_hostent.3 ares_free_string.3 ares_gethostbyaddr.3                \
- ares_gethostbyname.3 ares_init.3 ares_init_options.3 ares_mkquery.3        \
- ares_parse_a_reply.3 ares_parse_ptr_reply.3 ares_process.3                 \
- ares_query.3 ares_search.3 ares_send.3 ares_strerror.3 ares_timeout.3      \
+ ares_free_hostent.3 ares_free_string.3 ares_gethostbyaddr.3		    \
+ ares_gethostbyname.3 ares_init.3 ares_init_options.3 ares_mkquery.3	    \
+ ares_parse_a_reply.3 ares_parse_ptr_reply.3 ares_process.3		    \
+ ares_query.3 ares_search.3 ares_send.3 ares_strerror.3 ares_timeout.3	    \
  ares_version.3 ares_cancel.3 ares_parse_aaaa_reply.3 ares_getnameinfo.3    \
- ares_getsock.3
+ ares_getsock.3 ares_parse_ns_reply.3 \
+ ares_destroy_options.3 ares_save_options.3
 
 
 # Makefile.inc provides the CSOURCES and HHEADERS defines
@@ -280,7 +284,7 @@ libcares_la_SOURCES = $(CSOURCES) $(HHEADERS)
 # where to install the c-ares headers
 libcares_ladir = $(includedir)
 # what headers to install on 'make install':
-libcares_la_HEADERS = ares.h ares_version.h
+libcares_la_HEADERS = ares.h ares_version.h ares_dns.h
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -390,6 +394,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_mkquery.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_parse_a_reply.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_parse_aaaa_reply.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_parse_ns_reply.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_parse_ptr_reply.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_process.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ares_query.Plo@am__quote@
