--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ MSVCFILES = vc/adig/adig.dep vc/adig/adig.dsp vc/vc.dsw vc/ahost/ahost.dep \
 # adig and ahost are just sample programs and thus not mentioned with the
 # regular sources and headers
 EXTRA_DIST = CHANGES README.cares Makefile.inc adig.c ahost.c $(man_MANS) \
- $(MSVCFILES) AUTHORS config-win32.h
+ $(MSVCFILES) AUTHORS config-win32.h RELEASE-NOTES
 
 
 VER=-version-info 1:0:0
@@ -59,7 +59,7 @@ libcares_la_SOURCES = $(CSOURCES) $(HHEADERS)
 # where to install the c-ares headers
 libcares_ladir = $(includedir)
 # what headers to install on 'make install':
-libcares_la_HEADERS = ares.h ares_version.h
+libcares_la_HEADERS = ares.h ares_version.h ares_dns.h
 
 # Make files named *.dist replace the file without .dist extension
 dist-hook:
